# SortingComparison

./: CMakeLists.txt  Commons.cpp  Commons.hpp  Parallel.cpp  Parallel.hpp  README.md  Sequential.cpp  Sequential.hpp  extra.cpp  main_parallel.cpp  main_qparallel.cpp  main_sequential.cpp
thread_pool/: ThreadPool.cpp  ThreadPool.hpp
